--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ search_enabled: true
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Ameliorez de cette transcription !"
-gh_edit_repository: "https://github.com/MichelOnfray/MichelOnfray" # the github URL for your repo
-gh_edit_branch: "master" # the branch that your docs is served from
+gh_edit_repository: "https://michelonfray.github.io" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
